--- a/backend/aspnet/app/aspnet.csproj
+++ b/backend/aspnet/app/aspnet.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="dapper" Version="2.0.90" />
+    <PackageReference Include="npgsql" Version="5.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
