--- a/backend/aspnet/app/appsettings.json
+++ b/backend/aspnet/app/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { 
+    "Database": "host=host.docker.internal;port=5432;database=root;username=root;password=root"
+  }
 }
