--- a/backend/expressjs/package.json
+++ b/backend/expressjs/package.json
@@ -11,11 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.2",
+    "@types/pg": "^8.6.1",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
